# mksite

./: Cargo.toml  LICENSE  Makefile  README.md  mksite.1  mksite.1.scd  mksite.default.toml
.github/workflows/: mksite.yml
docs/: mksite.toml
docs/layout/: _.html
docs/src/: index.md
docs/static/: style.css
example/: mksite.toml
example/layout/: _.html  index.html
example/src/: index.html  mksite.1.scd  test.md
src/: cli.rs  config.rs  error.rs  main.rs  site.rs  transform.rs  util.rs
src/cli/: build.rs  clean.rs  init.rs  new.rs
