[package]
name = "mksite"
version = "0.1.0"
authors = ["alterae <alterae@pm.me>"]
edition = "2021"
description = "A file format-agnostic static site generator"
homepage = "https://alterae.github.io/mksite"
repository = "https://github.com/alterae/mksite"
license = "MIT"
keywords = ["ssg", "static", "site", "generator"]
categories = ["command-line-utilities"]
exclude = ["/docs", "/.github", "/Makefile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.14", features = ["derive"] }
fs_extra = "1.2.0"
maplit = "1.0.2"
serde = { version = "1.0.145", features = ["derive"] }
shell-words = "1.1.0"
tera = "1.17.1"
toml = "0.5.9"
