[package]
name = "mksite"
version = "0.1.2"
authors = ["alterae <alterae@pm.me>"]
edition = "2021"
description = "A file format-agnostic static site generator"
homepage = "https://alterae.github.io/mksite"
repository = "https://github.com/alterae/mksite"
license = "MIT"
keywords = ["ssg", "static", "site", "generator"]
categories = ["command-line-utilities"]
exclude = ["/docs", "/.github", "/Makefile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
fern = "0.6.2"
log = "0.4.22"
maplit = "1.0.2"
serde = { version = "1.0.210", features = ["derive"] }
shell-words = "1.1.0"
tera = "1.20.0"
thiserror = "1.0.63"
toml = "0.8.19"
